src/test/ui/type-alias-impl-trait/implied_bounds2.stderr
error[E0310]: the opaque type `Ty<'_, A>::{opaque#0}` may not live long enough
  --> $DIR/implied_bounds2.rs:6:46
   |
LL | fn test<'a, A>() where Ty<'a, A>: 'static, { assert_static::<Ty<'a, A>>() }
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `Ty<'_, A>::{opaque#0}: 'static`...
   = note: ...so that the type `Ty<'_, A>` will meet its required lifetime bounds

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
